--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
 </head>
 <body>    
     <div class="container-lg px-3 my-5 markdown-body">
+        <h1><a href="{{ site.url }}">{{ site.title }}</a></h1>
         {{ content }}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
