--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,6 @@
 layout: default
 ---
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date: "%Y-%m-%d" }}</p>
+<p><i>{{ page.date | date: "%Y-%m-%d" }} by {{ page.author }}</i></p>
 
 {{ content }}
