--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,3 +5,6 @@ layout: default
 <p><i>{{ page.date | date: "%Y-%m-%d" }} by {{ page.author }}</i></p>
 
 {{ content }}
+
+<hr>
+If you like this, follow the <a href="{{ site.url }}/feed.xml">RSS feed</a> to be notified of new posts.
