--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,20 @@
     {% seo %}
     <link rel="stylesheet" type="text/css" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" type="text/css" href="{{ "/assets/css/dark-mode-override.css?v=" | append: site.github.build_revision | relative_url }}">
+
+    <!-- Favicon from https://realfavicongenerator.net -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
+    <link rel="manifest" href="/assets/images/site.webmanifest">
+    <!-- The pinned tab mask image seems to apply to even unpinned tabs, so not supporting for now -->
+    <!-- <link rel="mask-icon" href="/assets/images/safari-pinned-tab.svg" color="#ffffff"> -->
+    <link rel="shortcut icon" href="/assets/images/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
+    <meta name="msapplication-config" content="/assets/images/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+    <!-- End Favicon -->
+
 </head>
 <body>    
     <div class="container-lg px-3 my-5 markdown-body">
