--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,4 +7,7 @@ layout: default
 {{ content }}
 
 <hr>
-If you like this, follow the <a href="{{ site.url }}/feed.xml">RSS feed</a> to be notified of new posts.
+<p>If you like this, follow the <a href="{{ site.url }}/feed.xml">RSS feed</a> to be notified of new posts. Looking for an RSS reader? On macOS and iOS, I like <a href="https://netnewswire.com">NetNewsWire</a>.</p>
+
+Found this useful or want to support more articles in the future? You can <a href="https://www.buymeacoffee.com/markavitale">buy me a bourbon</a>.</p>
+<p><script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="markavitale" data-color="#FF5F5F" data-emoji="🥃"  data-font="Arial" data-text="Buy me a bourbon" data-outline-color="#000000" data-font-color="#ffffff" data-coffee-color="#FFDD00" ></script></p>
