--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: darkmode
 ---
 <h1>{{ page.title }}</h1>
 <p><i>{{ page.date | date: "%Y-%m-%d" }} by {{ page.author }}</i></p>
