--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,6 +7,23 @@ layout: darkmode
 {{ content }}
 
 <hr>
+
+<script src="https://giscus.app/client.js"
+        data-repo="markavitale/markavitale.github.io"
+        data-repo-id="MDEwOlJlcG9zaXRvcnk4MjIxODcwMA=="
+        data-category="Article Comments"
+        data-category-id="DIC_kwDOBOaOzM4CN6N7"
+        data-mapping="og:title"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="en"
+        crossorigin="anonymous"
+        async>
+</script>
+
+<hr>
 <p>If you like this, follow the <a href="{{ site.url }}/feed.xml">RSS feed</a> to be notified of new posts. Looking for an RSS reader? On macOS and iOS, I like <a href="https://netnewswire.com">NetNewsWire</a>.</p>
 
 <p>Found this useful or want to support more articles in the future? You can <a href="https://www.buymeacoffee.com/markavitale">buy me a bourbon</a>.</p>
